// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has toggle--off class applied by default 1`] = `
.css-vp4bp7,
[data-css-vp4bp7] {
  text-align: center;
  display: inline-block;
  margin-bottom: 0px;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4;
  padding: 6px 12px;
  cursor: pointer;
  border-radius: 4px;
  color: #fff;
  background-color: #337ab7;
  border-color: #285f8f;
}

.css-vp4bp7:hover,
[data-css-vp4bp7]:hover,
.css-vp4bp7:active,
[data-css-vp4bp7]:active,
.css-vp4bp7:focus,
[data-css-vp4bp7]:focus {
  background-color: #285f8f;
  border-color: #1d4567;
}

<button
  class="css-vp4bp7"
  data-test="button"
>
  Toggle Me
</button>
`;

exports[`has toggle--on class applied when initialToggledOn: true 1`] = `
.css-15i754,
[data-css-15i754] {
  text-align: center;
  display: inline-block;
  margin-bottom: 0px;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4;
  padding: 6px 12px;
  cursor: pointer;
  border-radius: 4px;
  color: #fff;
  background-color: #22527b;
  border-color: #173853;
}

.css-15i754:hover,
[data-css-15i754]:hover,
.css-15i754:active,
[data-css-15i754]:active,
.css-15i754:focus,
[data-css-15i754]:focus {
  background-color: #1d4567;
  border-color: #122a3f;
}

<button
  class="css-15i754"
  data-test="button"
>
  Toggle Me
</button>
`;
